--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <!-- Header Section -->
   <header>
     <div class="logo">
-      <h1>John<span>Doe</span></h1>
+      <h1>Aarin<span>Akoju</span></h1>
     </div>
     <nav>
       <ul class="nav-links">
